test_suite/tests/ui/integer/validate/unknown.stderr
error: Unknown validation attribute: `meaningful`.
       Possible attributes are `greater`, `greater_or_equal`, `less`, `less_or_equal`, `predicate`, `with`, `error`.
 --> tests/ui/integer/validate/unknown.rs:3:19
  |
3 | #[nutype(validate(meaningful))]
  |                   ^^^^^^^^^^
