test_suite/tests/ui/integer/validate/unknown.rs
use nutype::nutype;

#[nutype(validate(meaningful))]
pub struct Amount(i32);

fn main () {}
